# ai_engineering_boot_camp

./: .gitignore  Dockerfile  Makefile  README.md  WEEK_1_STUDY_GUIDE.md  docker-compose.yaml  env.example  pyproject.toml
apps/api/: pyproject.toml
apps/api/evals/: eval_retriever.py  eval_retriever_extended.py
apps/api/src/api/: app.py
apps/api/src/api/agents/: agents.py  retrieval_generation.py
apps/api/src/api/agents/prompts/: retrieval_generation.yaml
apps/api/src/api/api/: endpoints.py  models.py
apps/chatbot_ui/src/chatbot_ui/: app.py
notebooks/week_1/: 01-explore-amazon-dataset.ipynb  02-RAG-preprocessing-items.ipynb  03-RAG-pipeline.ipynb  04-Observability-foundations.ipynb  05-RAG-Eval-Dataset.ipynb  06-RAG-Evals.ipynb
notebooks/week_2/: 01-Structured-Outputs-Intro.ipynb  02-Structured-Outputs-RAG-Pipeline.ipynb  03-Hybrid-Search.ipynb  04-Reranking.ipynb  05-Prompt-Management.ipynb  06-Eval-Dataset-Large.ipynb
src/: app.py
src/core/: config.py
